--- a/1번 문제.md
+++ b/1번 문제.md
@@ -1,1 +1,101 @@
+## Synchronized 사용하기
 
+만약 데이터베이스 내 어떤 테이블 데이터에 접근하는 프로세스가 한 개라면 Synchronized 도입을 고려해볼 수 있다.
+
+Synchronized는 멀티쓰레드 환경에서 어떤 변수나 함수에 대해 오직 한 쓰레드에서만 동시에 접근할 수 있도록 하여 race condition을 방지하는 방식이다.
+
+```java
+@Service
+public class StockService {
+	private StockRepository stockRepository;
+
+	public StockService(StockRepository stockRepository) {
+		this.stockRespository = stockRepository;
+	}
+
+	@Transactional
+	public synchronized void decrease(Long id, Long quantity) {
+		// get stock
+		// 재고 감소
+		// 저장
+
+		Stock stock = stockRepository.findById(id).orElseThrow();
+		stock.decrease(quantity);
+		stockRepository.saveAndFlush(stock);
+	}
+}
+```
+
+데이터에 접근하는 메소드에 대해 synchronized 키워드를 사용하여 동기화를 해주었다. 이를 통해 decrease 함수를 사용하여 다수의 쓰레드가 동시에 데이터를 읽어오거나 업데이트하지 못하도록 방지하였다.
+
+이와 같은 방식은 단일 프로세스 내에서의 데이터 정합성 보장을 위해 간단히 적용할 수 있는 방식이지만 공유 데이터에 대한 경합이 증가한다면 성능이 저하될 가능성이 있으며 여러 프로세스간 데이터 정합성을 보장하지 못하기에 다중화된 서버, 혹은 같은 데이터베이스 자원에 접근하는 여러 종류의 서비스가 존재할 경우 race condition을 방어하지 못한다.
+
+## 비관적 락(Pessimistic Locking) 사용하기
+
+여러 서버에서 동일한 데이터베이스 테이블에 접근할 때 데이터 정합성을 보장하기 위해 우선 데이터베이스에서 제공하는 Lock 기능을 활용할 수 있다.
+
+Pessimistic Locking 매커니즘은 데이터베이스 내 특정 데이터에 경합 상황이 발생하리라는 전제 하에 우선 락을 걸고 업데이트를 수행하게끔 하며, 이를 달성하기 위해 데이터베이스에서 제공하는 락을 활용한다.
+
+비관적 락을 구현하기 위해 Shared Lock, Exclusive Lock을 활용할 수 있다.
+
+```sql
+SELECT * FROM Order WHERE id = 1 FOR SHARE;
+```
+
+우선 공유 락은 락이 걸린 데이터에 대해 다른 트랜잭션에서 읽기 연산만 수행할 수 있으며, 쓰기 연산을 하지 못하도록 한다.
+
+공유 락을 얻어온 트랜잭션은 락이 존재하는 동안 읽어온 데이터가 다른 트랜잭션에 의해 변경되는 것을 방지할 수 있다.
+
+```sql
+SELECT * FROM Order WHERE id = 1 FOR UPDATE;
+```
+
+두번째로 Exclusive Lock은 다른 트랜잭션에서의 읽기, 쓰기 작업 모두 수행할 수 없도록 한다. 락을 건 대상에 대해 락이 끝날 때까지 자원을 독점하므로 Dirty Read를 방지할 수 있지만, 데드락이 발생할 가능성이 있어 이에 대한 방어가 필요하다.
+
+## 낙관적 락(Optimistic Locking) 사용하기
+
+경합 상황을 전제하고 Read 단계부터 락을 사용하는 Pessimistic Locking과 비교하여 Optimistic Locking은 업데이트중 경합이 발생하였을 때 대응하도록 하는 방식이다. DB에서 제공하는 락 매커니즘을 사용하지 않고 애플리케이션에서 경합 상황을 체크하고 재시도하도록 구현하는 방식이다.
+
+JPA에서는 경합을 체크하고자 하는 엔티티에 Version 칼럼을 추가하여 현재 업데이트하는 버젼이 만료되었는지 확인한다. 만약 어떤 쓰레드에서 처음 읽어들였던 버젼이 업데이트 시점에 변경되었다면 데이터를 다시 읽어들여 로직을 수행하는 재시도 로직을 구현한다.
+
+Optimistic Locking을 이용할 경우 DB의 Lock을 사용하지 않아 경합이 적게 발생하는 환경에서 성능상의 이점이 있지만, 경합이 잦게 발생할 경우 롤백 및 재시도하는 로직을 반복적으로 수행하게 되어 오히려 성능이 낮아질 수도 있다.
+
+## Named Lock 사용하기
+
+분산락 정보를 관리하기 위한 저장소로서 이미 사용중인 RDB를 활용할 수도 있다.
+
+MySQL에서는 기본 기능으로 이름으로 구분되는 락을 획득, 해지할 수 있는 Named Lock 기능을 제공한다.
+
+클라이언트는 `GET_LOCK`, `RELEASE_LOCK`을 통해 락을 획득, 해지할 수 있다.
+
+## Redis를 활용하여 Lock 구현하기
+
+대표적인 Key-Value Store인 Redis를 활용하여 락 정보를 관리하고 분산 락을 구현하는 방식을 채택할 수도 있다.
+
+Java에서 사용 가능한 Lettuce, 그리고 Redisson 두 가지 라이브러리를 통해 각각 다른 방식으로 분산 락을 구현할 수 있다.
+
+### Lettuce를 활용하여 구현하기
+
+[Lettuce](https://github.com/lettuce-io/lettuce-core)는 Spring Data Redis에 기본적으로 탑재된 레디스 클라이언트이다.
+
+Lettuce는 **setnx** 명령어를 활용하여 **spin lock** 방식으로 분산 락을 구현한다.
+
+1. 어떤 쓰레드에서 setnx 명령어로 키가 “example”인 데이터를 lock 요청한다.
+2. redis는 lock 성공시 성공 응답을 리턴한다.
+3. 다른 쓰레드에서 setnx 명령어로 키가 “exmaple”인 데이터를 lock 요청한다.
+4. “example” 데이터는 이미 락이 걸려있기에 redis 서버는 실패 응답을 리턴한다.
+5. 어떤 쓰레드가 락을 얻어오는 데에 실패했다면 락이 사용 가능해질때까지 반복하여 확인한다.
+
+Lettuce 사용시 간단하게 락을 구현할 수 있다. 하지만 spin lock 방식을 사용하기에 재시도 로직에서 지속적으로 락의 사용 가능 여부를 질의하게 되어 redis 서버에 상당한 부하를 유발할 수 있다.
+
+### Redisson을 활용하여 구현하기
+
+Lettuce에서 Spin Lock 방식으로 락을 구현한 것과 비교해 Reddison은 Pub-Sub 기반으로 Lock 구현을 제공한다.
+
+- Channel을 통해 락 획득을 시도하는 쓰레드를 관리한다.
+- 어떤 쓰레드가 락 사용을 마칠 경우 메시지를 채널에 전달한다.
+- 채널은 락 획득을 원하는 쓰레드에 메시지를 전달한다.
+
+Pub-Sub 방식을 채택함으로서 레디스 서버가 채널을 구독하는 서비스 쓰레드에 락 사용 가능 여부를 직접 전달하기에 부하가 적은 방식으로 Lock의 구현이 가능하다.
+
+그러나 별도 라이브러리를 사용해야 하며 라이브러리에서 제공하는 Lock 구현체의 사용 방식을 학습하는 비용이 존재하므로 재시도 로직에 대한 필요성 등을 따져 구현 방식을 선택해야 한다.
